<resources>
    <string name="app_name">mTRIAGE</string>
    <string name="danePersonalne">DANE PERSONALNE</string>
    <string name="triageFormularz">PYTANIE TRIAGE</string>
    <string name="szczegolyMed">SZCZEGÓŁY</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="imie">Wpisz imie</string>
    <string name="nazwisko">Wpisz nazwisko</string>
    <string name="wiek">Wpisz wiek</string>
    <string name="hint_name">Imię</string>
    <string name="hint_lastname">Nazwisko</string>
    <string name="hint_age">Wiek</string>
    <string name="no_sex">Płeć jest obowiązkowa</string>

    <string name="buttonTekst">wprowadz</string>
    <string name="pytanie1">Chodzi?</string>
    <string name="pytanie2">Obecny oddech?</string>
    <string name="pytanie2cd">Oddech powrócił?</string>
    <string name="pytanie3">Oddech 8-30/min?</string>
    <string name="pytanie3cd">Tętno obecne?</string>
    <string name="pytanie4">Nawrót kapilarny \u003c2s?</string>
    <string name="pytanie5">Świadomy?</string>
    <string name="nfc_enter">Wprowadź NFC ID</string>
    <string name="nfc_button">Własne NFC</string>
    <string name="tak">TAK</string>
    <string name="nie">NIE</string>
    <string name="men">MĘŻCZYZNA</string>
    <string name="women">KOBIETA</string>
    <string name="triageWynik">Triage = </string>

    <string name="dodanoTriage">Dodanie Triage powiodło się</string>
    <string name="dodanoPacjenta">Dodanie poszkodowanego powiodło się</string>
    <string name="niedodanoTriage">Dodanie triage NIE powiodło się</string>
    <string name="niedodanoPacjenta">Dodanie pacjenta NIE powiodło się</string>
    <string name="pacjentZnaleziony">Wczytano dane pacjenta</string>
    <string name="pacjentNieZnaleziony">Nie znaleziono pacjenta</string>
    <string name="dodanoSzczegol">Zapisano w DB</string>

    <string name="longitude">długość geograficzna</string>
    <string name="latitude">szerokość geograficzna</string>
    <string name="rozmiar">rozmiar</string>
    <string name="małe">małe</string>
    <string name="średnie">średnie</string>
    <string name="duże">duże</string>
    <string name="opis">opis zdarzenia</string>
    <string name="nowe_zdarzenie">Dodaj zdarzenie</string>
    <string name="no_size">Rozmiar jest wymagany</string>
    <string name="no_longitude">Nie określono lokalizacji</string>
    <string name="IncidentExist">Zdarzenie jest już stworzone, możesz przejść dalej</string>
    <string name="NoIncident">Nie określono zdarzenia</string>
    <string name="next">DALEJ</string>

    <string name="uwagi">Wpisz komentarz</string>
    <string name="enter">Wprowadź</string>
    <string name="gumka">Czyść</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_fullname">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="left">Leworęczny</string>
    <string name="right">Praworęczny</string>
    <!-- Aler Dialog -->
    <string name="for_create">Dodać nowego pacjenta?</string>
    <string name="create_message">Pojawi się nowy formularz z możliwością wprowadzenia kolejnego poszkodowanego.</string>
    <string name="add">DODAJ</string>
    <string name="cancel">ANULUJ</string>
    <string name="for_edit">Zmienić status istniejącego pacjenta?</string>
    <string name="edit_message">Pojawi się formularz z możliwością zmian statusu danego pacjenta. Zbliż tag NFC.</string>
    <string name="nfcTag">Zbliż odpowiedni tag NFC</string>
    <string name="edit">ZMIEŃ</string>
</resources>
